--- a/Social-Media.html
+++ b/Social-Media.html
@@ -9,8 +9,6 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>My Socials</title>
-
-  <!-- Font Awesome -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
 
   <style>
@@ -22,6 +20,7 @@
 
     body {
       display: grid;
+      font-family: "Poppins", sans-serif;
       place-items: center;
     }
 
@@ -31,72 +30,62 @@
 
     }
 
-    .social {
-      background-color: #eae9e9;
-      width: 55px;
-      height: 55px;
-      border-radius: 50%;
-      display: grid;
-      place-items: center;
+    .icon {
+      /* Change the icon size here */
+      font-size: 2em;
+      /* Change the icons colours here*/
+      color: #7a7a7a
     }
 
-    .icon {
-      font-size: 1.2em;
-    }
 
     .blog:hover {
-      background-color: #ffbd2f;
+      color: #ffbd2f;
     }
 
     .email:hover {
-      background-color: #23c8c8;
+      color: #23c8c8;
     }
 
     .facebook:hover {
-      background-color: #4267B2;
+      color: #4267B2;
     }
 
     .instagram:hover {
-      background: rgb(241, 102, 217);
-      background: radial-gradient(circle, rgba(241, 102, 217, 1) 10%, rgba(252, 176, 69, 1) 76%, rgba(253, 29, 29, 1) 100%);
+      color: rgb(241, 102, 217);
     }
 
     .linkedin:hover {
-      background-color: #0e76a8;
+      color: #0e76a8;
     }
 
     .twitter:hover {
-      background-color: #26a7de;
+      color: #26a7de;
     }
 
     .reddit:hover {
-      background-color: #ff4500;
+      color: #ff4500;
     }
 
     .tiktok:hover {
-      background-color: #ff0050;
+      color: #ff0050;
     }
 
     .youtube:hover {
-      background-color: #FF0000;
+      color: #FF0000;
     }
 
     .pinterest:hover {
-      background-color: #c8232c;
+      color: #c8232c;
     }
 
     .telegram:hover {
-      background-color: #2AABEE;
+      color: #2AABEE;
     }
 
     .social {
       position: relative;
       margin: 10px;
       cursor: pointer;
-    }
-
-    .social:hover {
-      color: #fff;
     }
   </style>
 
@@ -109,73 +98,72 @@
     <div class="wrapper">
 
       <!-- Start blog Icon -->
-      <div id="blog" onclick="navigate(this.id)" class="social blog">
-        <span class="icon"><i class="fa-solid fa-blog"></i></span>
+      <div id="blog" onclick="navigate(this.id)" class="social">
+        <span class="icon blog"><i class="fa-solid fa-blog"></i></span>
       </div>
       <!-- End blog Icon -->
 
       <!-- Start email Icon -->
-      <div id="email" onclick="navigate(this.id)" class="social email">
+      <div id="email" onclick="navigate(this.id)" class="social">
         <span class="icon email"><i class="fa-solid fa-envelope"></i></span>
       </div>
       <!-- End email Icon -->
 
       <!-- Start facebook Icon -->
-      <div id="facebook" onclick="navigate(this.id)" class="social facebook">
-        <span class="icon"><i class="fab fa-facebook"></i></span>
+      <div id="facebook" onclick="navigate(this.id)" class="social">
+        <span class="icon facebook"><i class="fab fa-facebook"></i></span>
       </div>
       <!-- End facebook Icon -->
 
-
       <!-- Start instagram Icon -->
-      <div id="instagram" onclick="navigate(this.id)" class="social instagram">
-        <span class="icon"><i class="fab fa-instagram"></i></span>
+      <div id="instagram" onclick="navigate(this.id)" class="social">
+        <span class="icon instagram"><i class="fab fa-instagram"></i></span>
       </div>
       <!-- End instagram Icon -->
 
       <!-- Start linkedin Icon -->
-      <div id="linkedin" onclick="navigate(this.id)" class="social linkedin">
-        <span class="icon"><i class="fab fa-linkedin"></i></span>
+      <div id="linkedin" onclick="navigate(this.id)" class="social">
+        <span class="icon linkedin"><i class="fab fa-linkedin"></i></span>
       </div>
       <!-- End linkedin Icon -->
 
       <!-- Start twitter Icon -->
-      <div id="twitter" onclick="navigate(this.id)" class="social twitter">
-        <span class="icon"><i class="fab fa-twitter"></i></span>
+      <div id="twitter" onclick="navigate(this.id)" class="social">
+        <span class="icon twitter"><i class="fab fa-twitter"></i></span>
       </div>
       <!-- End twitter Icon -->
 
-
       <!-- Start reddit Icon -->
-      <div id="reddit" onclick="navigate(this.id)" class="social reddit">
-        <span class="icon"><i class="fab fa-reddit"></i></span>
+      <div id="reddit" onclick="navigate(this.id)" class="social">
+        <span class="icon reddit"><i class="fab fa-reddit"></i></span>
       </div>
       <!-- End reddit Icon -->
 
-
       <!-- Start tiktok Icon -->
-      <div id="tiktok" onclick="navigate(this.id)" class="social tiktok">
-        <span class="icon"><i class="fab fa-tiktok"></i></span>
+      <div id="tiktok" onclick="navigate(this.id)" class="social">
+        <span class="icon tiktok"><i class="fab fa-tiktok"></i></span>
       </div>
       <!-- End tiktok Icon -->
 
       <!-- Start youtube Icon -->
-      <div id="youtube" onclick="navigate(this.id)" class="social youtube">
-        <span class="icon"><i class="fab fa-youtube"></i></span>
+      <div id="youtube" onclick="navigate(this.id)" class="social">
+        <span class="icon youtube"><i class="fab fa-youtube"></i></span>
       </div>
       <!-- End youtube Icon -->
 
       <!-- Start pinterest Icon -->
-      <div id="pinterest" onclick="navigate(this.id)" class="social pinterest">
-        <span class="icon"><i class="fab fa-pinterest"></i></span>
+      <div id="pinterest" onclick="navigate(this.id)" class="social">
+        <span class="icon pinterest"><i class="fab fa-pinterest"></i></span>
       </div>
       <!-- End pinterest Icon -->
 
       <!-- Start telegram Icon -->
-      <div id="telegram" onclick="navigate(this.id)" class="social telegram">
+      <div id="telegram" onclick="navigate(this.id)" class="social">
         <span class="icon telegram"><i class="fab fa-telegram"></i></span>
       </div>
       <!-- End telegram Icon -->
+
+
 
     </div>
 
